add basic functions, pages, bugfixes
TODO: make clear all button worky

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
           <h1>Header</h1>
         </div>
         <div class="header-right">
-          <button class="btn">Log In</button>
-          <button class="btn">Sign Up</button>
+          <a href="./login.html"><button class="btn">Log In</button></a>
+          <a href="./signup.html"><button class="btn">Sign Up</button></a>
         </div>
       </header>
       
@@ -29,9 +29,11 @@
           <div>
             <button class="btn add-task-btn">Add New Task</button>
             <input type="text" id="task-input" class="hidden" placeholder="Enter a task">
+            <button class="btn clear-tasks">Clear</button>
           </div>
       </main>
-    
-      <script src="script.js"></script>
+
+    <script src="script.js"></script>
+
 </body>
 </html>
