--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <header>
         <div class="header-left">
-          <h1>Header</h1>
+          <h1>Task Tracker</h1>
         </div>
         <div class="header-right">
           <a href="./login.html"><button class="btn">Log In</button></a>
