part of the redesign + edit icon
redesign is still in progress - some bugs need to be fixed before I can continue.

--- a/index.html
+++ b/index.html
@@ -4,24 +4,25 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="deco.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-F7obIxCjFJ5G+5nHQ39Dh3FJ8MhwXN0z0PQpYgq/nw9vqE7HBczor6qLlSSg37iiz/92z5x8EVRxsNslh46Jrg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Task Tracker</title>
 </head>
 <body>
     <header>
         <div class="header-left">
           <h1>Task Tracker</h1>
+          </div>
         </div>
         <div class="header-right">
-          <a href="./login.html"><button class="btn">Log In</button></a>
-          <a href="./signup.html"><button class="btn">Sign Up</button></a>
+          <a href="https://simdesu.tech" target="_blank"><button class="btn">Creator's Portfolio</button></a>
         </div>
       </header>
       
       <main>
         <div class="container">
           <div class="task-buttons">
-            <button class="btn">To-Do Tasks</button>
-            <button class="btn">Completed Tasks</button>
+            <button class="btn task-btn">To-Do Tasks</button>
+            <button class="btn task-btn">Completed Tasks</button>
           </div>
           <div class="task-list">
             <!-- Your tasks will be dynamically added here -->
